duy-tran-nginx-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duy-tran-nginx-deployment
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: duy-tran-nginx
  template:
    metadata:
      labels:
        app: duy-tran-nginx
    spec:
      containers:
      - name: duy-tran-nginx
        image: 192.168.56.2:32000/duy-tran-nginx
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: duy-tran-nginx-svc
  labels:
    app: duy-tran-nginx-svc
spec:
  type: NodePort
  selector:
    app: duy-tran-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30039
    protocol: TCP
